@@ -8,10 +8,11 @@ platform = any
 
 [files]
 packages = mixtt
-# data_files = 
-#     etc/mixtt =
-#         etc/mixtt/topology.json
+data_files = 
+    etc/mixtt =
+        etc/mixtt/topology.json
+        etc/mixtt/umbrella.json
 
 [entry_points]
 console_scripts = 
-    mixtt = mixtt.mixtt:main
+    mixtt = mixtt.__main__:main
