@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Incorporate p4 switch
+* Added a scapy switch to simulate p4 umbrella
 * Added VLAN support, as well as multiple ifaces per host
 * Rework config and added vlan support
 * Added support for multiple connections from a host
